# docs/swagger.json
@@ -510,6 +510,11 @@
         },
         "/auth/steam": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
